# dcbot-poise

./: .gitignore  Cargo.toml  readme.md
src/: data.rs  event.rs  main.rs
src/apis/: iphone.rs  mod.rs  sellrank.rs  spotify.rs
src/commands/: mod.rs
src/commands/exam/: fe.rs
src/commands/game/: mod.rs
src/commands/game/dokkan/: command.rs  model.rs
src/commands/general/: about.rs  mod.rs  serverinfo.rs  userinfo.rs
src/commands/meonly/: mod.rs
src/commands/music/spotify/: mod.rs
src/utils/: collection.rs  constant.rs  db.rs  mod.rs  spotify_handler.rs
src/utils/discord/: activity.rs  button.rs  describe.rs  embed.rs  mod.rs  page.rs  select.rs
src/utils/discord/modal/: mod.rs
src/utils/image/: mod.rs
