[package]
name = "dcbot-poise"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/wuliao97/dcbot-poise"
description = "This Bot program written by Rust and using Poise framework.\nDIsplay various Music info (e.g. a track info from your activity, search on the Spotify)"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = "0.4"
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
lru-cache = "0.1"
async-trait = "0.1"
content_inspector = "0.2"
const_format = "0.2"
rspotify = "0.11.7"
chrono = "0.4.19"


[dependencies.poise]
version = "0.5.5"
features = ["cache"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["unstable_discord_api"]