[package]
name = "dcbot-poise"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/wuliao97/dcbot-poise"
description = "This Bot program is written by Rust using Poise framework. It dlsplays various Music info (e.g. a track info from your activity, search on the Spotify)"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
log = { version = "0.4.14", default-features = false }
strip-ansi-escapes = "0.1.0"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.26.7"
async-trait = "0.1"
rspotify = "0.11.7"
chrono = "0.4.19"


[dependencies.poise]
version = "0.5.5"
features = ["cache"]

[dependencies.serenity]
version = "0.11.6"
default-features = false
features = ["unstable_discord_api"]